refactor: switch to json based docs
- feat: start setting up the plugin for parsing
- feat: start parsing classes
- feat: update framework json
- fix: fixed rendering custom files with css
- chore: update framework json to exclude externals
- feat: setup parsing sapphire classes and do a lot of link fixing
- refactor: switch to sapphire result
- fix: remove replaceall for Node 14 compat
- fix: actually remove replaceAll
- fix: fixed css extraction regex
- I thought I did this already
- fix: fixed broken link on welcome page
- chore: temporarily disable reporting broken links
- feat: much stuff
- change `classes` to `class` to match DJS
- add `typedef` and `namespace` linking
- fix linking of non-generic types
- update guide urls to match `class` change
- chore: bump deps
- chore: cleanup types
- feat: add variant to typedefs
- build: make it easier to debug
- fix: partially fix link extraction
- feat(docgen): add renderTypedef()
   - Moved parseSee() from /lib/renderer/renderClass.ts to /lib/renderer/utils.ts
   - Add /lib/renderer/renderTypedef.ts
     Which adds basic functionality in the website with things like title, description and extendedDescription
- chore: sort ts interfaces in docgen output
- chore: update doc types
- refactor: completely refactor how links are resolved
- fix: fixed links for `{@link` tags and propegate change to mdn and djs
- fix: use `replace` instead of `replaceAll`
- feat(docusaurus-discordjs-docgen): add functionality for enum and interface
- style(docusaurus-discordjs-docgen): use Array#flat() for typedef
- feat(docusaurus-discordjs-docgen): add constructor table functionality for classes
- feat(docusaurus-discordjs-docgen): align table content to center
- feat(docusaurus-discordjs-docgen): remove description column if all falsy
- feat(docusaurus-discordjs-docgen): add properties functionality for classes
- ci: add automatic vercel deploys workflow
- chore(docusaurus-typedoc-json-parser): initial commit
- chore(docusaurus-typedoc-js

--- a/docs/Guide/getting-started/updating-from-v2-to-v3.mdx
+++ b/docs/Guide/getting-started/updating-from-v2-to-v3.mdx
@@ -340,36 +340,37 @@ uppercase `P` represents the [`Events`][events] object name)
 - `[P]`CommandError (`[p]CommandError`) - emitted when the command run method throws an error.
 - `[P]`CommandFinish (`[p]CommandFinish`) - emitted when the command run is finished.
 
-[`ipreconditioncontainer`]: ../../Documentation/api-framework/interfaces/IPreconditionContainer
-[`preconditioncontainerarray`]: ../../Documentation/api-framework/classes/PreconditionContainerArray
-[`preconditioncontainersingle`]: ../../Documentation/api-framework/classes/PreconditionContainerSingle
+[`ipreconditioncontainer`]: ../../Documentation/sapphire-framework/interface/IPreconditionContainer
+[`preconditioncontainerarray`]: ../../Documentation/sapphire-framework/class/PreconditionContainerArray
+[`preconditioncontainersingle`]: ../../Documentation/sapphire-framework/class/PreconditionContainerSingle
 [acr]: ../application-commands/application-command-registry/what-is-it.mdx
-[allflowsprecondition]: ../../Documentation/api-framework/classes/AllFlowsPrecondition
+[allflowsprecondition]: ../../Documentation/sapphire-framework/class/AllFlowsPrecondition
 [applicationcommandregistry]: ../application-commands/application-command-registry/what-is-it.mdx
 [autocomplete]: ../application-commands/interaction-handlers/autocomplete.mdx
-[chat-input-parallel]: ../../Documentation/api-framework/interfaces/IPreconditionCondition#chatinputparallel
-[chat-input-sequential]: ../../Documentation/api-framework/interfaces/IPreconditionCondition#chatinputsequential
-[command-acr]: ../../Documentation/api-framework/classes/Command#applicationcommandregistry
-[command-chat-input-run]: ../../Documentation/api-framework/classes/Command#chatinputrun
-[command-context-menu-run]: ../../Documentation/api-framework/classes/Command#contextmenurun
-[command-message-run]: ../../Documentation/api-framework/classes/Command#messagerun
-[command-rac]: ../../Documentation/api-framework/classes/Command#registerapplicationcommands
+[chat-input-parallel]: ../../Documentation/sapphire-framework/interface/IPreconditionCondition#chatinputparallel
+[chat-input-sequential]: ../../Documentation/sapphire-framework/interface/IPreconditionCondition#chatinputsequential
+[command-acr]: ../../Documentation/sapphire-framework/class/Command#applicationcommandregistry
+[command-chat-input-run]: ../../Documentation/sapphire-framework/class/Command#chatinputrun
+[command-context-menu-run]: ../../Documentation/sapphire-framework/class/Command#contextmenurun
+[command-message-run]: ../../Documentation/sapphire-framework/class/Command#messagerun
+[command-rac]: ../../Documentation/sapphire-framework/class/Command#registerapplicationcommands
 [commands]: #commands
-[context-menu-parallel]: ../../Documentation/api-framework/interfaces/IPreconditionCondition#contextmenuparallel
-[context-menu-sequential]: ../../Documentation/api-framework/interfaces/IPreconditionCondition#contextmenusequential
-[events]: ../../Documentation/api-framework/#events
-[fetchchannelfrominteraction]: ../../Documentation/api-framework/classes/Precondition#fetchchannelfrominteraction
-[idhints]: ../../Documentation/api-framework/interfaces/ApplicationCommandRegistry.RegisterOptions#idhints
-[ipreconditioncondition]: ../../Documentation/api-framework/interfaces/IPreconditionCondition
+[context-menu-parallel]: ../../Documentation/sapphire-framework/interface/IPreconditionCondition#contextmenuparallel
+[context-menu-sequential]: ../../Documentation/sapphire-framework/interface/IPreconditionCondition#contextmenusequential
+[events]: ../../Documentation/sapphire-framework/#events
+[fetchchannelfrominteraction]: ../../Documentation/sapphire-framework/class/Precondition#fetchchannelfrominteraction
+[idhints]: ../../Documentation/sapphire-framework/interface/ApplicationCommandRegistry.RegisterOptions#idhints
+[ipreconditioncondition]: ../../Documentation/sapphire-framework/interface/IPreconditionCondition
 [loadmessagecommandlisteners]:
-  ../../Documentation/api-framework/interfaces/SapphireClientOptions#loadmessagecommandlisteners
-[message-parallel]: ../../Documentation/api-framework/interfaces/IPreconditionCondition#messageparallel
-[message-sequential]: ../../Documentation/api-framework/interfaces/IPreconditionCondition#messagesequential
-[precondition-chat-input-run]: ../../Documentation/api-framework/classes/Precondition#chatinputrun
-[precondition-context-menu-run]: ../../Documentation/api-framework/classes/Precondition#contextmenurun
-[precondition-message-run]: ../../Documentation/api-framework/classes/Precondition#messagerun
+  ../../Documentation/asapphirepi-framework/interface/SapphireClientOptions#loadmessagecommandlisteners
+[message-parallel]: ../../Documentation/sapphire-framework/interface/IPreconditionCondition#messageparallel
+[message-sequential]: ../../Documentation/sapphire-framework/interface/IPreconditionCondition#messagesequential
+[precondition-chat-input-run]: ../../Documentation/sapphire-framework/class/Precondition#chatinputrun
+[precondition-context-menu-run]: ../../Documentation/sapphire-framework/class/Precondition#contextmenurun
+[precondition-message-run]: ../../Documentation/sapphire-framework/class/Precondition#messagerun
 [rcic-idhints]: ../application-commands/application-command-registry/registering-chat-input-commands#idhints
-[supportsautocompleteinteractions]: ../../Documentation/api-framework/classes/Command#supportsautocompleteinteractions
-[supportschatinputcommands]: ../../Documentation/api-framework/classes/Command#supportschatinputcommands
-[supportscontextmenucommands]: ../../Documentation/api-framework/classes/Command#supportscontextmenucommands
-[supportsmessagecommands]: ../../Documentation/api-framework/classes/Command#supportsmessagecommands
+[supportsautocompleteinteractions]:
+  ../../Documentation/sapphire-framework/class/Command#supportsautocompleteinteractions
+[supportschatinputcommands]: ../../Documentation/sapphire-framework/class/Command#supportschatinputcommands
+[supportscontextmenucommands]: ../../Documentation/sapphire-framework/class/Command#supportscontextmenucommands
+[supportsmessagecommands]: ../../Documentation/sapphire-framework/class/Command#supportsmessagecommands
