--- a/docs/Guide/plugins/i18next/getting-started.mdx
+++ b/docs/Guide/plugins/i18next/getting-started.mdx
@@ -297,28 +297,28 @@ export class PingCommand extends Command {
 }
 ```
 
-[`saphclientoptions`]: ../../../Documentation/api-framework/interfaces/SapphireClientOptions
-[`internationalizationcontext`]: ../../../Documentation/api-plugins/interfaces/i18next_src.InternationalizationContext
-[resolve-key]: ../../../Documentation/api-plugins/modules/i18next_src.md#resolvekey
+[`saphclientoptions`]: ../../../Documentation/api-framework/interface/SapphireClientOptions
+[`internationalizationcontext`]: ../../../Documentation/sapphire-plugin-i18next/interface/InternationalizationContext
+[resolve-key]: ../../../Documentation/sapphire-plugin-i18next/function/resolvekey
 [fs-backend]: https://github.com/skyra-project/archid-components/tree/main/packages/i18next-backend
-[fetchlanguage]: ../../../Documentation/api-plugins/modules/i18next_src.md#fetchlanguage
-[i18n-options]: ../../../Documentation/api-plugins/interfaces/i18next_src.InternationalizationOptions
-[sapphireclient]: ../../../Documentation/api-framework/classes/SapphireClient.md
+[fetchlanguage]: ../../../Documentation/sapphire-plugin-i18next/function/fetchlanguage
+[i18n-options]: ../../../Documentation/sapphire-plugin-i18next/interface/InternationalizationOptions
+[sapphireclient]: ../../../Documentation/sapphire-framework/class/SapphireClient.md
 [i18next]: https://i18next.com
 [plugin]: https://github.com/sapphiredev/plugins/tree/main/packages/i18next
 [using-container]: ../../additional-information/using-and-extending-container.mdx
 [internationalizationcontext.guild]:
-  ../../../Documentation/api-plugins/interfaces/i18next_src.InternationalizationContext#guild
+  ../../../Documentation/sapphire-plugin-i18next/interface/InternationalizationContext#guild
 [internationalizationcontext.channel]:
-  ../../../Documentation/api-plugins/interfaces/i18next_src.InternationalizationContext#channel
+  ../../../Documentation/sapphire-plugin-i18next/interface/InternationalizationContext#channel
 [internationalizationcontext.user]:
-  ../../../Documentation/api-plugins/interfaces/i18next_src.InternationalizationContext#user
+  ../../../Documentation/sapphire-plugin-i18next/interface/InternationalizationContext#user
 [internationalizationcontext.interactionguildlocale]:
-  ../../../Documentation/api-plugins/interfaces/i18next_src.InternationalizationContext#interactionguildlocale
+  ../../../Documentation/sapphire-plugin-i18next/interface/InternationalizationContext#interactionguildlocale
 [internationalizationcontext.interactionlocale]:
-  ../../../Documentation/api-plugins/interfaces/i18next_src.InternationalizationContext#interactionlocale
-[messagerun]: ../../../Documentation/api-framework/classes/Command.md#messagerun
-[chatinputrun]: ../../../Documentation/api-framework/classes/Command.md#chatinputrun
-[contextmenurun]: ../../../Documentation/api-framework/classes/Command.md#contextmenurun
-[fetcht]: ../../../Documentation/api-plugins/modules/i18next_src.md#fetcht
-[tfunction]: ../../../Documentation/api-plugins/interfaces/i18next_src.TFunction
+  ../../../Documentation/sapphire-plugin-i18next/interface/InternationalizationContext#interactionlocale
+[messagerun]: ../../../Documentation/sapphire-framework/class/Command.md#messagerun
+[chatinputrun]: ../../../Documentation/sapphire-framework/class/Command.md#chatinputrun
+[contextmenurun]: ../../../Documentation/sapphire-framework/class/Command.md#contextmenurun
+[fetcht]: ../../../Documentation/sapphire-plugin-i18next/function/fetcht
+[tfunction]: ../../../Documentation/sapphire-plugin-i18next/interface/TFunction
