--- a/docs/Guide/utilities/time-utilities.mdx
+++ b/docs/Guide/utilities/time-utilities.mdx
@@ -129,4 +129,7 @@ console.log(Timestamp.utc('2022-04-25'));
 ```
 
 [cron-strings]: https://en.wikipedia.org/wiki/Cron
-[time-enum]: ../../Documentation/api-utilities/enums/time_utilities_src.Time
+
+<!-- TODO: Check proper URL -->
+
+[time-enum]: ../../Documentation/sapphire-time-utilities/enum/Time
