Fix plugin API documentation
It is otherwise unclear that this is inside an `api` property

--- a/docs/Guide/plugins/API/getting-started.mdx
+++ b/docs/Guide/plugins/API/getting-started.mdx
@@ -54,7 +54,7 @@ either be located in your `new SapphireClient` constructor call, or `super` in y
 extension class.
 
 ```javascript
-{
+api: {
   auth: {
 	// The application/client ID of your bot
 	// You can find this at https://discord.com/developers/applications
